# aristotle_autoresearch

./: .env  .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.manager  RAILWAY_DEPLOYMENT.md  README.md  deploy-to-railway.sh  docker-compose.yml  pyproject.toml  railway.yaml  requirements.txt  run_erdos_123_live_research.sh  run_erdos_live_research.sh  run_erdos_research.sh  vercel.json
.github/: keepalive
.github/workflows/: erdos-123-manager.yml  erdos-manager.yml
api/: index.py
docs/: live_control_plane.md
examples/: erdos_combinatorics_charter.json  project_charter.json
examples/configs/: provider_aristotle_cli.json  provider_mock.json
examples/conjectures/: weighted_monotone.json
outputs/erdos_123_live_async/: report.manager_snapshot.json  report.md  state.sqlite
outputs/erdos_live_async/: report.md  (+2 more)
scripts/: backfill_manager_audits.py  kimi_manager_llm.py
tests/: test_aristotle_cli.py  test_async_orchestration.py  test_campaign_start.py  test_db_exports.py  test_demo_flow.py  test_erdos123_campaign.py  test_ethos_integration.py  test_evaluator.py  test_experiment_generator.py  test_github_state.py  test_lemma_utils.py  test_live_control_plane.py  test_llm_manager.py  test_manager.py  test_manager_tick.py  test_motif_refactor.py  test_move_registry.py  test_multiconjecture_manager.py  test_phase56_replay_health.py  test_prompt_contracts.py  test_research_memory.py  test_result_ingestion.py  test_rich_frontier.py  test_stale_active_recovery.py  test_theorem_families.py  test_upgraded_parsing.py  test_verification_pipeline_integration.py
(+2004 files in other folders)
